# rpm-project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.torch  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  queries.py  requirements.txt
.github/workflows/: pylint.yml
config/: .env.example  logging.conf.yml  settings.py
consumer/: __main__.py  app.py  bot.py  logger.py  metrics.py  web_app.py
consumer/api/dat/: __init__.py  health.py  metrics.py
consumer/api/tech/: metrics.py
consumer/handlers/: form.py  like.py  recommend.py  recommendation.py  recommendations.py
consumer/recommend_system/: chroma.py
consumer/recsys/: db.py
consumer/schema/: base.py  form.py  like.py  recommendation.py
fixtures/: public.user.json  users.json
migrations/versions/: 1b67627da56e_.py
models/: consts.py  encoder.py
prometheus/: prometheus_config.yml
prometheus/data/01JFHTE10N4CFWG7S1FWQM4T2K/: index  meta.json
prometheus/data/01JFHVJVXEN7Q29BQ4H0EDQG41/: index  meta.json
prometheus/data/chunks_head/: 000001  000002  000003  000004  000005  000006  (+1 more)
recommend_system/: chroma.py
scripts/: load_fixture.py  setup_db.py
src/: app.py  bot.py  consts.py  logger.py  metrics.py
src/api/: health.py  metrics.py
src/handlers/: buttons.py  markups.py
src/services/: minio_service.py
src/utils/: validators.py
storage/: consts.py  db.py  queries.py  rabbit.py  redis.py
tests/: conftest.py
tests/common/: conftest.py
tests/mocking/: rabbit.py
tests/test_handle_user/: test_handle_user.py
tests/test_start_dating/: test_start_dating.py
(+38 files in other folders)
