[tool.poetry]
name = "recsys"
version = "0.1.0"
description = ""
authors = ["EgorikA4 <egorik4litvinov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
neo4j = "^5.27.0"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
